fixed iframes disappearing behind widget titles

--- a/css/style.css
+++ b/css/style.css
@@ -570,7 +570,7 @@ header {
 /* Search Bar */
 
 .searchform {
-  margin: 40px 5px 10px 5px
+  margin: 10px 5px;
 }
 .search-container {
   width: 80%;
@@ -791,7 +791,7 @@ ol, ul {
   position: relative;
 	color: #666;
   margin-top: 0;
-	padding: 15px;
+	padding: 50px 15px 15px 15px;
 	background: transparent;
 }
 .widget-container:first-child {
@@ -816,14 +816,15 @@ ol, ul {
   color: #e9ecc9;
   text-shadow:none;
   text-shadow: 1px 2px 2px rgba(0,0,0,0.5);
-  filter: dropshadow(color=rgba(0,0,0,0.5), offx=1, offy=2);      
+  filter: dropshadow(color=rgba(0,0,0,0.5), offx=1, offy=2);
 }
 .widget-container > ul{
-  margin-top: 40px;
   margin-left: 0px;
-  margin-bottom:10px;
 }
-
+.widget-container iframe {
+}
+.widget-container iframe:after {
+}
 /* Blog and Post Styles */
 
 .entry-title{
